Add Substack and GitHub links

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <section class="links">
                 <h2>📬 Connect</h2>
                 <div class="link-buttons">
-                    <a href="https://substack.com/@YOUR_SUBSTACK" class="link-btn substack">
+                    <a href="https://frankdrescher.substack.com/" class="link-btn substack" target="_blank">
                         <span>📰</span> Substack
                     </a>
-                    <a href="https://github.com/YOUR_GITHUB" class="link-btn github">
+                    <a href="https://github.com/frasod" class="link-btn github" target="_blank">
                         <span>💻</span> GitHub
                     </a>
                 </div>
