Add GitHub login notice to Sparks apps

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
                         <span class="project-icon">🎲</span>
                         <h3>Nonsense Generator</h3>
                         <p>Generate delightful gibberish and random nonsense on demand</p>
+                        <small style="opacity: 0.5; font-size: 0.75rem;">Requires GitHub login</small>
                     </a>
                     <a href="https://github.com/spark/frasod/dada-art-generator" class="project-card" target="_blank">
                         <span class="project-icon">🎨</span>
                         <h3>Dada Art Generator</h3>
                         <p>Create surreal, dadaist art with algorithmic chaos</p>
+                        <small style="opacity: 0.5; font-size: 0.75rem;">Requires GitHub login</small>
                     </a>
                 </div>
             </section>
