Remove all emojis - stark minimal design

--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">🐵🐵🐵</div>
             <h1>Office Full of Monkeys</h1>
             <p class="tagline">A collection of nonsense apps & experiments</p>
         </header>
 
         <main>
             <section class="projects">
-                <h2>🚀 Projects</h2>
+                <h2>Projects</h2>
                 <div class="project-grid">
                     <a href="https://github.com/spark/frasod/nonsense-generator" class="project-card" target="_blank">
-                        <span class="project-icon">🎲</span>
                         <h3>Nonsense Generator</h3>
                         <p>Generate delightful gibberish and random nonsense on demand</p>
                         <small style="opacity: 0.5; font-size: 0.75rem;">Requires GitHub login</small>
                     </a>
                     <a href="https://github.com/spark/frasod/dada-art-generator" class="project-card" target="_blank">
-                        <span class="project-icon">🎨</span>
                         <h3>Dada Art Generator</h3>
                         <p>Create surreal, dadaist art with algorithmic chaos</p>
                         <small style="opacity: 0.5; font-size: 0.75rem;">Requires GitHub login</small>
@@ -37,28 +34,21 @@
             </section>
 
             <section class="links">
-                <h2>📬 Connect</h2>
+                <h2>Connect</h2>
                 <div class="link-buttons">
                     <a href="https://frankdrescher.substack.com/" class="link-btn substack" target="_blank">
-                        <span>📰</span> Substack
+                        Substack
                     </a>
                     <a href="https://github.com/frasod" class="link-btn github" target="_blank">
-                        <span>💻</span> GitHub
+                        GitHub
                     </a>
                 </div>
             </section>
         </main>
 
         <footer>
-            <p>Made with 🍌 by monkeys</p>
+            <p>© 2025</p>
         </footer>
-    </div>
-
-    <div class="floating-monkeys">
-        <span class="monkey m1">🐒</span>
-        <span class="monkey m2">🙈</span>
-        <span class="monkey m3">🙉</span>
-        <span class="monkey m4">🙊</span>
     </div>
 </body>
 </html>
