Add office monkeys header image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <header>
+            <img src="office-monkeys.jpg" alt="Office Full of Monkeys" class="header-image">
             <h1>Office Full of Monkeys</h1>
             <p class="tagline">A collection of nonsense apps & experiments</p>
         </header>
