Update tagline to match Substack wording

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <img src="office-monkeys.jpg" alt="Office Full of Monkeys" class="header-image">
             <h1>Office Full of Monkeys</h1>
-            <p class="tagline">A collection of nonsense apps & experiments</p>
+            <p class="tagline">A quiet blog about things that may or may not make sense.</p>
         </header>
 
         <main>
