--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <p>Create surreal, dadaist art with algorithmic chaos</p>
                         <small style="opacity: 0.5; font-size: 0.75rem;">Requires GitHub login</small>
                     </a>
-                    <a href="#" class="project-card" target="_blank">
+                    <a href="http://178.156.197.239/" class="project-card" target="_blank">
                         <h3>Thyran</h3>
                         <p>Where Ideas Transcend Time</p>
                         <small style="opacity: 0.5; font-size: 0.75rem;">Coming soon</small>
