--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
             <section class="articles">
                 <h2>Recent Writing</h2>
                 <ul class="article-list">
-                    <li><a href="https://frankdrescher.substack.com/p/article-1" target="_blank">Article Title One</a></li>
-                    <li><a href="https://frankdrescher.substack.com/p/article-2" target="_blank">Article Title Two</a></li>
-                    <li><a href="https://frankdrescher.substack.com/p/article-3" target="_blank">Article Title Three</a></li>
+                    <li><a href="https://frankdrescher.substack.com/p/obsolescophobia" target="_blank">Obsolescophobia</a></li>
                 </ul>
             </section>
         </main>
