--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="images/Gemini_Generated_Image_arykegarykegaryk.png" alt="Office Full of Monkeys" class="header-image">
+            <img src="images/Gemini_Generated_Image_bg4rd1bg4rd1bg4r (1).png" alt="Office Full of Monkeys" class="header-image">
             <h1>Office Full of Monkeys</h1>
             <p class="tagline">A quiet blog about things that may or may not make sense.</p>
         </header>
